--- a/chrono.html
+++ b/chrono.html
@@ -3,40 +3,146 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chrono — Hub</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <style>
-    :root{--bg:#0b1020;--card:#121933;--text:#e8edff;--accent:#4f7cff}
-    *{box-sizing:border-box} body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:var(--bg);color:var(--text)}
-    .wrap{max-width:900px;margin:0 auto;padding:28px}
-    h1{margin:0 0 12px;font-size:28px;font-weight:800}
-    .grid{display:grid;grid-template-columns:1fr;gap:14px}
-    @media(min-width:800px){.grid{grid-template-columns:repeat(3,1fr)}}
-    .card{background:var(--card);border:1px solid #1b2751;border-radius:16px;padding:18px;text-align:center}
-    a.btn{display:inline-block;width:100%;text-decoration:none;color:var(--text);background:var(--accent);padding:12px;border-radius:12px;font-weight:700}
-  </style>
+  <title>ChronoVitesse — Chrono</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="wrap">
-    <h1>⏱️ Chrono — Hub</h1>
-    <p>Regroupez ici uniquement vos modes chrono (ex. simple, tours/intermédiaires, duel). Liez vos pages existantes ou utilisez celles de votre projet.</p>
-    <div class="grid">
-      <div class="card">
-        <h2>Chrono simple</h2>
-        <a class="btn" href="chrono-simple.html">Ouvrir</a>
+  <div class="container">
+    <header>
+      <h1>⏱️ Chrono</h1>
+      <div class="actions">
+        <a class="btn" href="index.html">🏠 Accueil</a>
+        <button class="btn ghost" id="help">❓ Explications</button>
       </div>
-      <div class="card">
-        <h2>Chrono tours & intermédiaires</h2>
-        <a class="btn" href="chrono-tours.html">Ouvrir</a>
-      </div>
-      <div class="card">
-        <h2>Chrono duel</h2>
-        <a class="btn" href="chrono-duel.html">Ouvrir</a>
+    </header>
+
+    <div class="card">
+      <div class="content">
+        <div class="tabbar">
+          <button class="tab active" data-tab="simple">Chrono simple</button>
+          <button class="tab" data-tab="laps">Tours / Intermédiaires</button>
+          <button class="tab" data-tab="duel">Duel</button>
+        </div>
+
+        <div id="tab-simple">
+          <div class="actions" style="gap:12px;flex-wrap:wrap">
+            <button class="btn ok" id="s-start">▶️ Start</button>
+            <button class="btn warn" id="s-pause">⏸ Pause</button>
+            <button class="btn danger" id="s-reset">⟲ Reset</button>
+          </div>
+          <div class="grid-3" style="margin-top:10px">
+            <div class="kpi"><div class="big" id="s-time">00:00.000</div><div class="label">Temps</div></div>
+            <div class="kpi"><div class="big" id="s-splits">0</div><div class="label">Intermédiaires</div></div>
+            <div class="kpi"><div class="big" id="s-last">—</div><div class="label">Dernier tour</div></div>
+          </div>
+          <div class="actions" style="margin-top:10px">
+            <button class="btn" id="s-lap">➕ Marquer un temps</button>
+          </div>
+          <div class="help" id="s-log" style="margin-top:8px"></div>
+        </div>
+
+        <div id="tab-laps" style="display:none">
+          <div class="grid-3">
+            <div>
+              <label>Longueur d'un tour (m)</label>
+              <input class="input" id="l-lapm" type="number" min="1" value="200">
+            </div>
+            <div>
+              <label>Ajout fraction</label>
+              <div class="actions">
+                <button class="btn" data-frac="0.25">+ 1/4 tour</button>
+                <button class="btn" data-frac="0.5">+ 1/2 tour</button>
+                <button class="btn" data-frac="0.75">+ 3/4 tour</button>
+              </div>
+            </div>
+            <div class="kpi"><div class="big" id="l-distance">0 m</div><div class="label">Distance totale</div></div>
+          </div>
+          <div class="actions" style="gap:12px;flex-wrap:wrap;margin-top:8px">
+            <button class="btn ok" id="l-start">▶️ Start</button>
+            <button class="btn warn" id="l-pause">⏸ Pause</button>
+            <button class="btn danger" id="l-reset">⟲ Reset</button>
+            <button class="btn" id="l-lapbtn">➕ Tour terminé</button>
+          </div>
+          <div class="help" id="l-log" style="margin-top:8px"></div>
+        </div>
+
+        <div id="tab-duel" style="display:none">
+          <div class="grid-2">
+            <div class="kpi"><div class="big" id="d-a">00:00.000</div><div class="label">Athlète A</div></div>
+            <div class="kpi"><div class="big" id="d-b">00:00.000</div><div class="label">Athlète B</div></div>
+          </div>
+          <div class="actions" style="margin-top:8px;gap:8px;flex-wrap:wrap">
+            <button class="btn ok" id="d-start">▶️ Start</button>
+            <button class="btn warn" id="d-pause">⏸ Pause</button>
+            <button class="btn danger" id="d-reset">⟲ Reset</button>
+            <button class="btn" id="d-lap-a">A ➕</button>
+            <button class="btn" id="d-lap-b">B ➕</button>
+          </div>
+          <div class="help" id="d-log" style="margin-top:8px"></div>
+        </div>
       </div>
     </div>
-    <p style="opacity:.7;margin-top:10px">Vous pouvez simplement changer ces liens pour pointer vers les fichiers déjà présents dans votre dépôt.</p>
-    <p><a class="btn" href="index.html" style="display:inline-block;width:auto">🏠 Retour accueil</a></p>
+
+    <footer>ChronoVitesse — Équipe EPS Lycée Vauban — Luxembourg — JB</footer>
   </div>
+
+  <div class="modal" id="modalHelp">
+    <div class="box">
+      <header><strong>Guide chrono</strong><span class="close" data-close="modalHelp">✖</span></header>
+      <div class="content">
+        <ul>
+          <li><strong>Simple :</strong> Start/Pause/Reset. Bouton « Marquer un temps » pour enregistrer un intermédiaire.</li>
+          <li><strong>Tours :</strong> Ajoutez des tours complets ou des fractions (1/4, 1/2, 3/4). Saisir la longueur d'un tour pour calculer la distance totale.</li>
+          <li><strong>Duel :</strong> Deux chronos synchrones, marquage indépendant des tours.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const $ = (id)=>document.getElementById(id);
+    const showTab = (name)=>{
+      document.querySelectorAll('.tabbar .tab').forEach(t=>t.classList.toggle('active', t.dataset.tab===name));
+      document.getElementById('tab-simple').style.display = name==='simple'?'block':'none';
+      document.getElementById('tab-laps').style.display = name==='laps'?'block':'none';
+      document.getElementById('tab-duel').style.display = name==='duel'?'block':'none';
+    };
+    document.querySelectorAll('.tabbar .tab').forEach(btn=>btn.onclick=()=>showTab(btn.dataset.tab));
+    document.getElementById('help').onclick=()=>document.getElementById('modalHelp').style.display='flex';
+    document.querySelectorAll('.close').forEach(x=>x.onclick=()=>document.getElementById(x.dataset.close).style.display='none');
+    document.querySelectorAll('.modal').forEach(m=>m.addEventListener('click',e=>{ if(e.target===m) m.style.display='none'; }));
+
+    // Simple
+    let sStart=0,sElapsed=0,sRunning=false,sSplits=[];
+    function sLoop(){ if(!sRunning) return; const t=performance.now()-sStart+sElapsed; $('s-time').textContent=fmt(t); requestAnimationFrame(sLoop); }
+    $('s-start').onclick=()=>{ if(!sRunning){ sRunning=true; sStart=performance.now(); sLoop(); } };
+    $('s-pause').onclick=()=>{ if(sRunning){ sElapsed+=performance.now()-sStart; sRunning=false; } };
+    $('s-reset').onclick=()=>{ sStart=0;sElapsed=0;sRunning=false;sSplits=[]; $('s-time').textContent='00:00.000'; $('s-splits').textContent='0'; $('s-last').textContent='—'; $('s-log').textContent=''; };
+    $('s-lap').onclick=()=>{ const t=parseTime($('s-time').textContent); sSplits.push(t); $('s-splits').textContent=sSplits.length; const last = sSplits.length>1? sSplits[sSplits.length-1]-sSplits[sSplits.length-2] : sSplits[0]; $('s-last').textContent=fmt(last); $('s-log').textContent=sSplits.map((v,i)=>`${i+1}. ${fmt(v)}`).join(' | '); };
+
+    // Laps
+    let lStart=0,lElapsed=0,lRunning=false,lDist=0,lSplits=[];
+    function lLoop(){ if(!lRunning) return; requestAnimationFrame(lLoop); }
+    $('l-start').onclick=()=>{ if(!lRunning){ lRunning=true; lStart=performance.now(); lLoop(); } };
+    $('l-pause').onclick=()=>{ if(lRunning){ lElapsed += performance.now()-lStart; lRunning=false; } };
+    $('l-reset').onclick=()=>{ lStart=0;lElapsed=0;lRunning=false;lDist=0;lSplits=[]; $('l-distance').textContent='0 m'; $('l-log').textContent=''; };
+    $('l-lapbtn').onclick=()=>addLap(1);
+    document.querySelectorAll('[data-frac]').forEach(b=>b.onclick=()=>addLap(Number(b.dataset.frac)));
+    function addLap(frac){ const m = Number($('l-lapm').value||0); const add = Math.round(m*frac); lDist += add; lSplits.push(add); $('l-distance').textContent=lDist+' m'; $('l-log').textContent=lSplits.map((v,i)=>`${i+1}. +${v} m`).join(' | '); }
+
+    // Duel
+    let dStart=0,dElapsed=0,dRunning=false,dA=[],dB=[];
+    function dLoop(){ if(!dRunning) return; const t=performance.now()-dStart+dElapsed; $('d-a').textContent=fmt(t); $('d-b').textContent=fmt(t); requestAnimationFrame(dLoop); }
+    $('d-start').onclick=()=>{ if(!dRunning){ dRunning=true; dStart=performance.now(); dLoop(); } };
+    $('d-pause').onclick=()=>{ if(dRunning){ dElapsed += performance.now()-dStart; dRunning=false; } };
+    $('d-reset').onclick=()=>{ dStart=0; dElapsed=0; dRunning=false; dA=[]; dB=[]; $('d-a').textContent='00:00.000'; $('d-b').textContent='00:00.000'; $('d-log').textContent=''; };
+    $('d-lap-a').onclick=()=>{ const t=parseTime($('d-a').textContent); dA.push(t); renderD(); };
+    $('d-lap-b').onclick=()=>{ const t=parseTime($('d-b').textContent); dB.push(t); renderD(); };
+    function renderD(){ const A=dA.map((v,i)=>`A${i+1}:${fmt(v)}`).join(' '); const B=dB.map((v,i)=>`B${i+1}:${fmt(v)}`).join(' '); $('d-log').textContent=[A,B].filter(Boolean).join(' | '); }
+
+    // Utils
+    function fmt(ms){ const m=Math.floor(ms/60000), s=Math.floor((ms%60000)/1000), z=Math.floor(ms%1000); return String(m).padStart(2,'0')+':'+String(s).padStart(2,'0')+'.'+String(z).padStart(3,'0'); }
+    function parseTime(txt){ const [mm,rest]=txt.split(':'); const [ss,zzz]=rest.split('.'); return (Number(mm)*60+Number(ss))*1000+Number(zzz); }
+  </script>
 </body>
 </html>
