--- a/index.html
+++ b/index.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ChronoVitesse — Accueil</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="container">
-    <header>
-      <h1>ChronoVitesse</h1>
-    </header>
-    <div class="grid">
-      <section class="card">
-        <div class="content">
-          <h2>⏱️ Chrono</h2>
-          <p>Regroupe uniquement les chronos (Simple, Tours/Intermédiaires, Duel).</p>
-          <div class="actions">
-            <a class="btn primary" href="chrono.html">Ouvrir</a>
-            <button class="btn ghost" id="helpAccueil">❓ Explications</button>
-          </div>
-        </div>
-      </section>
-      <section class="card">
-        <div class="content">
-          <h2>🧬 Tests VMA — Élève</h2>
-          <p>Cooper (12 min), Demi‑Cooper (6 min), VAMEVAL (palier). QR JSON compatible ScanProf.</p>
-          <div class="actions">
-            <a class="btn primary" href="tests-eleves.html">Ouvrir</a>
-            <button class="btn ghost" id="helpEleve">❓ Explications</button>
-          </div>
-        </div>
-      </section>
-      <section class="card">
-        <div class="content">
-          <h2>🎧 VMA — Prof (Audio)</h2>
-          <p>VAMEVAL officiel : départ 8,0 km/h, +0,5 km/h/min, bips toutes les 20 m. Plein écran.</p>
-          <div class="actions">
-            <a class="btn primary" href="vma-prof.html">Ouvrir</a>
-            <button class="btn ghost" id="helpProf">❓ Explications</button>
-          </div>
-        </div>
-      </section>
-    </div>
-    <footer>ChronoVitesse — Équipe EPS Lycée Vauban — Luxembourg — JB</footer>
-  </div>
-
-  <div class="modal" id="modalAccueil">
-    <div class="box">
-      <header><strong>Chrono</strong><span class="close" data-close="modalAccueil">✖</span></header>
-      <div class="content">
-        <p>Accès aux chronos : <strong>Simple</strong>, <strong>Tours/Intermédiaires</strong> (avec longueur de tour et fractions 1/4, 1/2, 3/4), et <strong>Duel</strong>.</p>
-      </div>
-    </div>
-  </div>
-  <div class="modal" id="modalEleve">
-    <div class="box">
-      <header><strong>Tests VMA — Élève</strong><span class="close" data-close="modalEleve">✖</span></header>
-      <div class="content">
-        <ul>
-          <li><strong>Cooper (12 min)</strong> : distance libre, calcul vitesse = distance/12min, VMA ≈ vitesse.</li>
-          <li><strong>Demi‑Cooper (6 min)</strong> : même principe sur 6 min.</li>
-          <li><strong>VAMEVAL (palier)</strong> : vitesse atteinte = VMA. Utilisez les gros boutons +/- palier.</li>
-        </ul>
-        <p>Un QR code <em>ScanProf</em> est généré au format JSON standard.</p>
-      </div>
-    </div>
-  </div>
-  <div class="modal" id="modalProf">
-    <div class="box">
-      <header><strong>VAMEVAL — Prof</strong><span class="close" data-close="modalProf">✖</span></header>
-      <div class="content">
-        <p>Protocole : départ <strong>8,0 km/h</strong>, incrément <strong>+0,5 km/h par minute</strong>, balises <strong>tous les 20 m</strong>, bip à chaque balise, bip long au changement de palier (chaque minute). Affichage plein écran avec anneau de progression (minute) + barre de cadence (vers la prochaine balise).</p>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    const open = (id)=>document.getElementById(id).style.display='flex';
-    const close = (id)=>document.getElementById(id).style.display='none';
-    document.getElementById('helpAccueil').onclick=()=>open('modalAccueil');
-    document.getElementById('helpEleve').onclick=()=>open('modalEleve');
-    document.getElementById('helpProf').onclick=()=>open('modalProf');
-    document.querySelectorAll('.close').forEach(x=>x.onclick=()=>close(x.dataset.close));
-    document.querySelectorAll('.modal').forEach(m=>m.addEventListener('click',e=>{ if(e.target===m) m.style.display='none'; }));
-  </script>
-</body>
-</html>
+<div>ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
