--- a/vma-prof.html
+++ b/vma-prof.html
@@ -1,172 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ChronoVitesse — VMA Prof (VAMEVAL)</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="container" id="root">
-    <header>
-      <h1>🎧 VAMEVAL — Prof</h1>
-      <div class="actions">
-        <a class="btn" href="index.html">🏠 Accueil</a>
-        <button class="btn" id="fs">⛶ Plein écran</button>
-        <button class="btn ghost" id="help">❓ Protocole</button>
-      </div>
-    </header>
-
-    <div class="card">
-      <div class="content">
-        <div class="grid-3">
-          <div>
-            <label>Départ (km/h)</label>
-            <input class="input" id="start" type="number" value="8.0" min="6" max="12" step="0.5">
-          </div>
-          <div>
-            <label>Incrément (+km/h/min)</label>
-            <input class="input" id="inc" type="number" value="0.5" min="0.5" max="1" step="0.5">
-          </div>
-          <div>
-            <label>Balise (m)</label>
-            <input class="input" id="balise" type="number" value="20" min="10" step="1">
-          </div>
-        </div>
-
-        <div class="actions" style="margin-top:10px">
-          <button class="btn ok" id="startBtn">▶️ Start</button>
-          <button class="btn warn" id="pauseBtn">⏸ Pause</button>
-          <button class="btn danger" id="resetBtn">⟲ Reset</button>
-          <button class="btn" id="countdownBtn">⏳ Pré‑départ 10s</button>
-          <label style="display:flex;align-items:center;gap:8px">
-            Volume <input class="input" id="vol" type="range" min="0" max="1" step="0.05" value="0.6">
-          </label>
-        </div>
-      </div>
-    </div>
-
-    <div class="grid" style="align-items:stretch">
-      <section class="card">
-        <div class="content" style="display:flex;gap:24px;align-items:center">
-          <div class="circle">
-            <div class="inner"><div class="fill" id="circleFill"></div></div>
-            <div class="center" id="minuteProgress">0%</div>
-          </div>
-          <div class="kpi" style="flex:1;min-height:160px">
-            <div class="big" id="speed">8.0</div>
-            <div class="label">km/h (Palier)</div>
-            <div class="help" id="status">Prêt</div>
-          </div>
-        </div>
-      </section>
-      <section class="card">
-        <div class="content">
-          <h2>Prochaine balise</h2>
-          <div class="progressWrap">
-            <div class="progressBar"><div class="progressInner" id="bar"></div></div>
-            <span class="badge" id="nextSec">0.00 s</span>
-          </div>
-          <div class="help">Bip court à chaque balise (~20 m), bip long à chaque changement de palier.</div>
-        </div>
-      </section>
-    </div>
-
-    <footer>ChronoVitesse — Équipe EPS Lycée Vauban — Luxembourg — JB</footer>
-  </div>
-
-  <div class="modal" id="modalHelp">
-    <div class="box">
-      <header><strong>Protocole VAMEVAL (enseignant)</strong><span class="close" data-close="modalHelp">✖</span></header>
-      <div class="content">
-        <ul>
-          <li>Départ <strong>8,0 km/h</strong>, augmentation <strong>+0,5 km/h</strong> toutes les <strong>60 s</strong>.</li>
-          <li>Balisage <strong>tous les 20 m</strong>. Les coureurs doivent être à la balise au bip.</li>
-          <li><strong>Bip court</strong> = balise ; <strong>bip long</strong> = changement de palier (chaque minute).</li>
-          <li>VMA ≈ vitesse du dernier palier tenu complètement.</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    const $ = (id)=>document.getElementById(id);
-    let ctx,gain; let running=false,paused=false; let t0=0,elapsed=0; let palier=0; let speed=8;
-    let minuteIv=null, lapIv=null, raf=null; let circleDeg=0, barPct=0;
-    let preCountdown=false, cdTimer=null, cdLeft=0;
-
-    function audioInit(){
-      if(ctx) return;
-      ctx = new (window.AudioContext||window.webkitAudioContext)();
-      gain = ctx.createGain(); gain.gain.value = Number($('vol').value||0.6); gain.connect(ctx.destination);
-    }
-    function beep(freq=880, dur=0.1){
-      if(!ctx) audioInit();
-      const o = ctx.createOscillator(); o.type='sine'; o.frequency.value=freq;
-      const g = ctx.createGain(); g.gain.value = Number($('vol').value||0.6);
-      o.connect(g).connect(ctx.destination); o.start(); setTimeout(()=>o.stop(), dur*1000);
-    }
-    function kmh_to_mps(v){ return v*1000/3600; }
-    function lapSeconds(){ const m = Number($('balise').value||20); return m / kmh_to_mps(speed); }
-    function updateUI(){
-      $('speed').textContent = speed.toFixed(1);
-      const sec = lapSeconds(); $('nextSec').textContent = sec.toFixed(2)+' s';
-    }
-    function setCircle(pct){
-      const deg = Math.max(0, Math.min(100,pct))*3.6;
-      $('circleFill').style.background = `conic-gradient(var(--accent) ${deg}deg, transparent ${deg}deg)`;
-      $('minuteProgress').textContent = Math.round(pct)+'%';
-    }
-    function setBar(pct){
-      $('bar').style.width = Math.max(0, Math.min(100,pct))+'%';
-    }
-    function schedule(){
-      minuteIv = setInterval(()=>{
-        palier += 1; speed += Number($('inc').value||0.5);
-        beep(1200,0.15);
-        circleStart = performance.now();
-      }, 60*1000);
-      function setLap(){
-        const iv = lapSeconds()*1000;
-        lapIv = setInterval(()=>beep(800,0.06), iv);
-      }
-      setLap();
-      const res = setInterval(()=>{ if(!running){ clearInterval(res); return; } clearInterval(lapIv); setLap(); }, 60*1000);
-    }
-    let circleStart=0;
-    function tick(){
-      if(!running) return;
-      if(!paused){
-        const now = performance.now();
-        elapsed = now - t0;
-        const pct = ((now - circleStart) % (60*1000)) / 600;
-        setCircle(pct);
-        const ls = lapSeconds()*1000;
-        const p = ((now - circleStart) % ls) / ls * 100;
-        setBar(p);
-        $('status').textContent = 'Palier ' + (palier+1) + ' — ' + speed.toFixed(1) + ' km/h';
-      }
-      raf = requestAnimationFrame(tick);
-    }
-    function startCore(){
-      if(running){ if(paused){ paused=false; t0 = performance.now() - elapsed; $('status').textContent='Reprise'; } return; }
-      running = true; paused=false;
-      speed = Number($('start').value||8); palier = 0;
-      t0 = performance.now(); elapsed=0; circleStart = performance.now();
-      $('status').textContent='En cours';
-      schedule(); updateUI(); tick(); beep(1000,0.2);
-    }
-
-    $('startBtn').onclick=()=>{ audioInit(); if(preCountdown){ cdLeft=10; $('status').textContent='Départ dans '+cdLeft+' s'; beep(600,0.1); cdTimer=setInterval(()=>{ cdLeft--; $('status').textContent='Départ dans '+cdLeft+' s'; beep(600,0.08); if(cdLeft<=0){ clearInterval(cdTimer); startCore(); } }, 1000); } else { startCore(); } };
-    $('pauseBtn').onclick=()=>{ if(!running||paused) return; paused=true; $('status').textContent='Pause'; clearInterval(minuteIv); clearInterval(lapIv); };
-    $('resetBtn').onclick=()=>{ running=false; paused=false; clearInterval(minuteIv); clearInterval(lapIv); cancelAnimationFrame(raf); elapsed=0; palier=0; speed=Number($('start').value||8); updateUI(); setCircle(0); setBar(0); $('status').textContent='Prêt'; };
-    $('countdownBtn').onclick=()=>{ preCountdown = !preCountdown; document.getElementById('countdownBtn').classList.toggle('primary', preCountdown); };
-    $('fs').onclick=async()=>{ const el=document.getElementById('root'); if(document.fullscreenElement){ await document.exitFullscreen(); } else { await el.requestFullscreen().catch(()=>{}); } };
-    $('start').oninput=updateUI; $('inc').oninput=updateUI; $('balise').oninput=updateUI; $('vol').oninput=()=>{ if(gain) gain.gain.value=Number($('vol').value||0.6); };
-    $('help').onclick=()=>document.getElementById('modalHelp').style.display='flex';
-    document.querySelectorAll('.close').forEach(x=>x.onclick=()=>document.getElementById(x.dataset.close).style.display='none');
-    document.querySelectorAll('.modal').forEach(m=>m.addEventListener('click',e=>{ if(e.target===m) m.style.display='none'; }));
-    updateUI(); setCircle(0); setBar(0);
-  </script>
-</body>
-</html>
+<div>ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
